@@ -17,7 +17,23 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="6">
+    <widget class="QLabel" name="mp_labelLanguageSite">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
     <widget class="QLabel" name="mp_labelLanguage">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -33,7 +49,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
+   <item row="1" column="1" colspan="2">
     <widget class="QLineEdit" name="mp_leLanguage">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -55,7 +71,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="3" colspan="3">
+   <item row="1" column="3" colspan="3">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -68,7 +84,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="mp_labelPath">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -84,7 +100,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1" colspan="5">
+   <item row="2" column="1" colspan="5">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLineEdit" name="mp_lePath">
@@ -124,7 +140,7 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0" colspan="6">
+   <item row="3" column="0" colspan="6">
     <widget class="QTreeWidget" name="mp_twLanguage">
      <property name="rootIsDecorated">
       <bool>true</bool>
@@ -144,7 +160,7 @@
      </column>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="4" column="0" colspan="2">
     <widget class="QPushButton" name="mp_pbDefault">
      <property name="statusTip">
       <string>Restore to default language</string>
@@ -154,7 +170,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="2" colspan="2">
+   <item row="4" column="2" colspan="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -167,14 +183,14 @@
      </property>
     </spacer>
    </item>
-   <item row="3" column="4">
+   <item row="4" column="4">
     <widget class="QPushButton" name="mp_pbSelect">
      <property name="text">
       <string>Select</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="5">
+   <item row="4" column="5">
     <widget class="QPushButton" name="mp_pbCancel">
      <property name="text">
       <string>Cancel</string>
